# dotfiles_old

./: .Xdefaults  .Xdefaults_init  .Xmodmap  .alias  .applist  .bashrc  .fzf.bash  .fzf.zsh  .gitconfig  .gitignore  .profile  .spacemacs  .spacevim  .spacevim (copy)  .startup  .tmux.conf  .tmux_init.conf  .xinitrc  .zshrc  README.md  run_me.sh
.alias/: dronekit  network  shortcuts  system
.apps/: apps.txt  i3.txt
.apps/install/: run_apps.sh
.assets/.apps/: apps  apps.txt  dev  dev.txt
.assets/.blender/: DestructiveExtrude.py  wazou_pie_menu.py
.assets/.notes/: aptitude.wiki  bookmarks.wiki  code_gist  commands.wiki  distracted.wiki  docker.wiki  git  git.wiki  index.wiki  inotify.wiki  network  network.wiki  paswords.wiki  python.wiki  raspberry.wiki  robotics.wiki  ssh.wiki  technologies.wiki
.assets/to_install/: sync_down_manjaro.sh
.bin/: captain  colorpick  exa  fd  greenclip  i3lock  lazygit  schemer2  slit  tgraph
.boot/bresilla_grub/: theme.txt
.boot/bresilla_plymouth/: bresilla.script
.bresilla/: bresilla
.config/: projects  promptline  searcher  zsh_history
.config/alacritty/: alacritty.yml
.config/awesome/: rc.lua
.config/bspwm/: bspwmrc
.config/cheat/: cheatrc.yaml
.config/color/: skull
.config/compton/: compton
.config/conky/: conky
.config/cool-retro-term/: TRIM.json
.config/direnv/: direnvrc
.config/dump/: NOTE.yml  img2svg  loopwall  polydump  setcolor  setwall
.config/dunst/: dunst  dunstrc
.config/fish/: config.fish  fish_variables  fishfile
.config/fontconfig/: fonts.conf
.config/gitstatus/: gitstatus.prompt.sh  gitstatus.prompt.zsh
.config/i3/: config  element
.config/i3lock/: blurlock  lock
.config/kitty/: kitty.conf
.config/mutt/: account.com.gmail.kushtrim  account.com.hotmail.kushtrim  account.com.unibo.kushtrim  account.com.yahoo.kushtrim  muttrc
.config/nvim/: bookmarks  init.vim
.config/oomox/: recent_palette.json
.config/pet/: config.toml  snippet.toml
.config/polybar/: center  main  polybar  side  spotify  test
.config/proji/templates/cmake/: .clang-format  .clang-tidy  .envrc  .gitignore  .travis.yml  CMakeLists.txt  shell.nix
.config/proji/templates/cmake/.github/workflows/: main.yml
.config/proji/templates/cmake/cmake/: Packaging.cmake
.config/proji/templates/cmake/include/second/: classic.h
.config/proji/templates/cmake/source/: main.cpp
.config/proji/templates/cmake/source/cplate/: classic.cpp
.config/proji/templates/cmake/source/second/: classic.cpp
.config/proji/templates/cmake/tests/: test_one.cpp
.config/qutebrowser/: autoconfig.yml  config.py  qutewal.py
.config/ranger/: commands.py  rc.conf  rifle.conf  scope.sh
.config/rofi/: rofi_bar  rofi_full  rofi_fuzzy  rofi_icon  rofi_menu
.config/slop/: boxzoom.frag  crosshair.frag
.config/sxhkd/: bspwm  i3  sxhkdrc
.config/tmass/: MAIN.yml  NOTE.yml
.config/tmux/: 4by2.yaml  COOL.yml  MAIN.yml  NOTE.yaml  NOTE.yml  PRO.yml  PROT.yml  VOLT.yml  note.yaml  ross.yaml
.config/zathura/: genzathrc  zathurarc
.config/zsh/: alger  async  deer  insult  texas  theme
.fpath/: texas  texas.bash  texas2
.func/: article  code  color  docker  dronekit  media  network  personal  raspberry  remote  robot  ros  shortcuts  sync  system  winman  wm  youplay
.hack/: cowpatty  hexd  netdiscover  objview  pixd
.i3/: accent  blurlock  color  compton  config  element  keyring  keyscreen  lock  polybar  randr3  recordscreen  rofi  rofi2  setwall  synchange  wall
.i3/blocks/: audio  audiohead  cpu  datetime  i3blocks  load  spacer
.i3/compton/: .compton.conf  compton
.i3/conky/: conky
.i3/drives/: drives  mount  unmount
.i3/dump/: polydump
.i3/dunst/: dunst
.i3/i3lock/: lock
.i3/layouts/: terms  terms.json
.i3/misc/: accent  blurlock  keymap  lock.ini  monitor  wall
.i3/mopidy/: mopidy.conf
.i3/polybar/: config  launch  polybar  spotify
.i3/rofi/: configs  confs  lists  marks  rofi.rasi  scripts  system  xplor
.i3/rofii/: confs  marks  rofi_bar  rofi_full  rofi_menu  rofi_pass  search  system  uplay
.icons/TRIMIX/: index.theme
.notes/: first  mac2pi  network  pi  sound
.sbin/: adblock  askpass  biblio  bootiso  con  contain  cornera  debtap  desk  extract  fileit  gifgen  hotspot  layout  loopwall  lsg  lsofgraph  mac2ip  monitor  onchange  open  pacinst  passmenu  pipes  play  pro  ranwhen  recffm  searcher  ship  spark  suda  tdrop  termop  ufetch  watchdot  wispot  zathura
.scripts/: askpass  bulk-size  colors  colortxt  dropop  fileit  foxy  goto  hotspot  jump  mac2ip  onchange  play  prompt  recordscreen  rompt  setwall  ship  skript  syncit  syncto  syncup  termop  texas  toggle  video2gif
.sources/: sources.list.save  trusted.gpg  trusted.gpg~
.sources/apt.conf.d/: 01autoremove-kernels
.sources/sources.list.d/: cuda-9-1-local.list  cuda.list  cuda.list.save  danielrichter2007-ubuntu-grub-customizer-xenial.list  dotnetdev.list  enpass.list.save  font-manager-ubuntu-staging-xenial.list.save  gazebo-stable.list  gnome3-team-ubuntu-gnome3-staging-xenial.list  jonathonf-ubuntu-texlive-2017-xenial.list.save  mozillateam-ubuntu-firefox-next-xenial.list.save  no1wantdthisname-ubuntu-ppa-xenial.list  nodesource.list.save  ros-latest.list.save  slack.list.save  thomas-schiex-ubuntu-blender-xenial.list  ubuntu-mozilla-daily-ubuntu-ppa-xenial.list  webupd8team-ubuntu-terminix-xenial.list
.sources/trusted.gpg.d/: budgie-remix_ubuntu_ppa.gpg  colingille_ubuntu_freshlight.gpg  font-manager_ubuntu_staging.gpg  fontforge_ubuntu_fontforge.gpg  gezakovacs_ubuntu_ppa.gpg  hanipouspilot_ubuntu_rtlwifi.gpg  ingalex_ubuntu_super-boot-manager.gpg  kalgasnik_ubuntu_ppa.gpg  minos-archive_ubuntu_main.gpg  nathan-renniewaldock_ubuntu_flux.gpg  no1wantdthisname_ubuntu_ppa.gpg  (+6 more)
.tmux/: 3by1.yaml  3by2.yaml  4by2.yaml  5by2.yaml  default.yaml  dropdown.yaml  layout  note.yaml  syst.yaml  tabs1.yaml  tabs2.yaml  term.yaml  term1.yaml  term2.yaml  termin.yaml  texas.yaml  tmux.yaml
.zsh/: autosuggestions.zsh  extract.plugin.zsh  prompt.zsh  snap.sh  texas  texas_init.zsh  theme.sh
(+242 files in other folders)
